Changed Button Labels

--- a/co59e480dbd0ea2bf41c9b898/index.html
+++ b/co59e480dbd0ea2bf41c9b898/index.html
@@ -6,8 +6,8 @@
         <div class = "window">
             <h1>Clicks:</h1>
             <h2 id="count-el">0</h2>
-            <button id="increment-btn" onclick="increment()">INCREMENT</button>
-            <button id="save-btn" onclick="save()">SAVE</button>
+            <button id="increment-btn" onclick="increment()">Clicks</button>
+            <button id="save-btn" onclick="save()">Game</button>
             <p id="save-el">Previous entries: </p>
         </div>
         <script src="index.js">
